force-app/main/default/objects/Payment_Portal__c.object
<CustomObject>
    <description>Payment details of a pledge / gift</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Payment amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Designation_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designation Detail</label>
        <referenceTo>Designation_Detail_Portal__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments_Portal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designation</label>
        <referenceTo>Designation_Portal__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments_Designation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Name_Auto_Number__c</fullName>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Payment Name Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>The pledge of gift the payment is paying to</description>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>Payments_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ascend_Designation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designation</label>
        <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
        <relationshipLabel>Payments (Portal)</relationshipLabel>
        <relationshipName>Payments_ascend_Designation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment (Portal)</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments (Portal)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>